--- a/ProjectOnePlace/Views/Shared/_Layout.cshtml
+++ b/ProjectOnePlace/Views/Shared/_Layout.cshtml
@@ -23,14 +23,14 @@
                 <a class="navbar-brand" href="#">Project OnePlace</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li class="dropdown">
+                <li ><a href="/">Home</a></li>
+                <li class="dropdown active">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         Release
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Release/NewRequest">New Release Request</a></li>
+                        <li class="active"><a href="/Release/NewRequest">New Release Request</a></li>
                         <li><a href="/Release/RequestList">Release List</a></li>
                     </ul>
                 </li>
